--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="nav-menu" id="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
                 <a href="#services" class="nav-link">Services</a>
+                <a href="#gallery" class="nav-link">Gallery</a>
                 <a href="#about" class="nav-link">About</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
@@ -36,7 +37,7 @@
             <h1>Professional pool care. Reliable service.</h1>
             <p>Expert pool repairs, professional cleaning, and comprehensive maintenance services. Quality workmanship at fair prices to keep your pool in perfect condition.</p>
             <div class="hero-buttons">
-                <a href="https://wa.me/27794364218?text=Hi%20John,%20I%20need%20help%20with%20my%20pool" class="btn btn-primary" target="_blank">
+                <a href="https://wa.me/27822579403?text=Hi%20John,%20I%20need%20help%20with%20my%20pool" class="btn btn-primary" target="_blank">
                     <i class="fab fa-whatsapp"></i> WhatsApp us
                 </a>
                 <a href="#services" class="btn btn-secondary">Our services</a>
@@ -134,50 +135,72 @@
             <h2>Pool giving you trouble?</h2>
             <p>Give us a call or send a message. We'll come out and take a look - no fancy talk, just honest work.</p>
             <div class="cta-buttons">
-                <a href="https://wa.me/27794364218?text=Hi%20John,%20my%20pool%20is%20giving%20me%20trouble" class="btn btn-primary" target="_blank">
+                <a href="https://wa.me/27822579403?text=Hi%20John,%20my%20pool%20is%20giving%20me%20trouble" class="btn btn-primary" target="_blank">
                     <i class="fab fa-whatsapp"></i> WhatsApp us
                 </a>
-                <a href="tel:+27794364218" class="btn btn-secondary">
+                <a href="tel:+27822579403" class="btn btn-secondary">
                     <i class="fas fa-phone"></i> Call us now
                 </a>
             </div>
         </div>
     </section>
 
-    <!-- Gallery Section - Commented out until real pool repair photos are available -->
-    <!--
+    <!-- Gallery Section -->
     <section id="gallery" class="gallery">
         <div class="container">
             <h2>Recent work</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1571902943202-507ec2618e8f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Pool tile and coping repair work" class="gallery-image">
+                    <img src="images/IMG-20251013-WA0002.jpg" alt="Pool repair and maintenance work" class="gallery-image">
+                    <div class="gallery-overlay">
+                        <h3>Pool repair work</h3>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="images/IMG-20251013-WA0003.jpg" alt="Pool cleaning and maintenance" class="gallery-image">
+                    <div class="gallery-overlay">
+                        <h3>Pool cleaning service</h3>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="images/IMG-20251013-WA0004.jpg" alt="Pool equipment and maintenance" class="gallery-image">
+                    <div class="gallery-overlay">
+                        <h3>Equipment maintenance</h3>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="images/IMG-20251013-WA0005.jpg" alt="Pool renovation and repair" class="gallery-image">
+                    <div class="gallery-overlay">
+                        <h3>Pool renovation work</h3>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="images/IMG-20251013-WA0006.jpg" alt="Pool repair and tile work" class="gallery-image">
                     <div class="gallery-overlay">
                         <h3>Tile and coping repair</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Pool cleaning and maintenance" class="gallery-image">
+                    <img src="images/IMG-20251013-WA0007.jpg" alt="Pool maintenance and cleaning" class="gallery-image">
                     <div class="gallery-overlay">
-                        <h3>Pool cleaning in progress</h3>
+                        <h3>Pool maintenance service</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Pool equipment and pump repair" class="gallery-image">
+                    <img src="images/IMG-20251013-WA0008.jpg" alt="Pool equipment repair" class="gallery-image">
                     <div class="gallery-overlay">
-                        <h3>Pump repair completed</h3>
+                        <h3>Equipment repair work</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Clean and clear swimming pool" class="gallery-image">
+                    <img src="images/IMG-20251013-WA0009.jpg" alt="Pool cleaning and water treatment" class="gallery-image">
                     <div class="gallery-overlay">
-                        <h3>After - crystal clear water</h3>
+                        <h3>Water treatment and cleaning</h3>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    -->
 
     <!-- Service Areas -->
     <section class="service-areas">
@@ -254,7 +277,7 @@
                             <i class="fas fa-phone"></i>
                             <div>
                                 <strong>Phone</strong>
-                                <p><a href="tel:+27794364218">+27 79 436 4218</a></p>
+                                <p><a href="tel:+27822579403">+27 82 2579403</a></p>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -326,13 +349,14 @@
                     <h4>Company</h4>
                     <ul>
                         <li><a href="#about">About Us</a></li>
+                        <li><a href="#gallery">Gallery</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-phone"></i> +27 79 436 4218</p>
-                    <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/27794364218" target="_blank">WhatsApp us</a></p>
+                    <p><i class="fas fa-phone"></i> +27 82 2579403</p>
+                    <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/27822579403" target="_blank">WhatsApp us</a></p>
                     <p><i class="fas fa-envelope"></i> info@johnmasterpools.com</p>
                 </div>
             </div>
