--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Master Pools - Pool Repairs & Maintenance</title>
+    <title>John Pools - Pool Repairs & Maintenance</title>
     <meta name="description" content="Reliable pool repairs, cleaning, and basic maintenance. Honest handyman services for your pool needs at fair prices.">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>John Master Pools</h2>
+                <h2>John Pools</h2>
             </div>
             <div class="nav-menu" id="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
@@ -223,7 +223,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>About John Master Pools</h2>
+                    <h2>About John Pools</h2>
                     <div class="about-features">
                         <div class="feature">
                             <i class="fas fa-handshake"></i>
@@ -264,10 +264,7 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <div>
-                                <strong>Email</strong>
-                                <p><a href="mailto:info@johnmasterpools.com">info@johnmasterpools.com</a></p>
-                            </div>
+                            
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
@@ -315,7 +312,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>John Master Pools</h3>
+                    <h3>John Pools</h3>
                     <p>Honest pool repairs and maintenance you can trust.</p>
                 </div>
                 <div class="footer-section">
@@ -339,11 +336,11 @@
                     <h4>Contact Info</h4>
                     <p><i class="fas fa-phone"></i> +27 82 2579403</p>
                     <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/27822579403" target="_blank">WhatsApp us</a></p>
-                    <p><i class="fas fa-envelope"></i> info@johnmasterpools.com</p>
+                
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 John Master Pools. All rights reserved.</p>
+                <p>&copy; 2024 John Pools. All rights reserved.</p>
             </div>
         </div>
     </footer>
